frontend/test/should_pass/exectype_AssignRandomToVarUntyped.grg
using exectype;

rule r
{
	modify  {
		exec(::z=$(42));
	}
}