frontend/test/should_fail/exectype_AssignSetmapEmptyToVar2.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<foo> =set<foo> ;> b:int=x.empty() );
	}
}